--- a/src/index.html
+++ b/src/index.html
@@ -16,10 +16,10 @@
 '---'      |  ,     .-./  '---" \   \     .' \  ; \   \  / '---'        
             `--`---'             `--`-,,-'    `--" `----'               
                       
-                     2018/4/26   www.nav3.cn
+                     2023/7/21   www.jobcher.com
 
         ,+++++++++++++++++++++++++++++++++++++++++++++++++.
-        ( We want you! https://github.com/xjh22222228/nav )
+        ( We want you! https://github.com/jobcher )
         `-,+++++++++++++++++++++++++++++++++++++++++++++++'
 -->
 <html>
@@ -33,7 +33,7 @@
   <link rel="icon" href="assets/logo.png">
   <!-- nav.config -->
   <link rel="stylesheet" href="//at.alicdn.com/t/font_2267418_9g7l2chchxs.css">
-  <title>发现导航 - 精选实用导航网站</title>
+  <title>JOB导航 - 精选实用导航网站</title>
 </head>
 <body>
   
